# CloudPlatformToolBox

client/: CMakeLists.txt
client/.kdev4/: client.kdev4
client/include/: common_include.h
client/include/log/: robotLog.h
client/include/validation/: robotCodeInfo.h
client/include/websocket/: robotBase.h
client/src/: CMakeLists.txt  robotCodeInfo.cpp  robotJson.cpp  robotLog.cpp  robotWS.cpp
client/test/: CMakeLists.txt  test_echo_server.cpp  test_project.cpp  test_robotCodeInfo.cpp  test_robotLog.cpp
server/conf/: nginx.conf
server/lua/: log.lua  redis.lua  validate.lua  websocket_client.lua  websocket_server.lua
